--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -1,11 +1,10 @@
 // Specific CSS for your home-page
 .form-container{
   background-color: white;
-  border-radius: 10px;
   box-shadow: 0px 10px 30px rgba(0,0,0,0.1);
   padding:25px;
-  position: absolute;
-  top: 54%;
+  min-height: 50vh;
+  padding: 0;
 }
 
 .home-box{
