--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,34 +1,16 @@
 
+
 <div class="container p-0">
+  <div id="loader">
+    <div class="loading-content">
+    </div>
+  </div>
   <div class="row home-box">
     <div class="d-flex flex-column" style="width: 100%;height: 100%;">
       <div class="flex-grow-1">
         fremgioerng
       </div>
       <img style="width: 100%" src="<%= asset_path('home.png')%>">
-  <div id="loader">
-    <div class="loading-content">
-    <!--   <div class="gifs d-flex justify-content-around">
-
-
-      </div> -->
-      <!-- <h3 class="d-flex justify-content-center m-5">Let's get drunk!</h3> -->
-
-    </div>
-
-  </div>
-
-  <div class="row home-box">
-    <div style="width: 100%;height: 100%; padding-top: 190px;">
-      <img style="width: 100%" src="<%= asset_path('home.png')%>">
-    </div>
-
-
-    <!-- Bottom container -->
-    <div class="col-12 col-md-8 form-container p-0 text-white" style="border-radius: 33px; background-color: #2B292D;">
-      <!-- Header of container -->
-      <h4 class="text-center my-4">Some Text</h4>
-
         <!-- Bottom container -->
         <!-- first input box -->
         <%= simple_form_for :search, url: venues_path, method: :get do |f| %>
@@ -44,12 +26,11 @@
                 <!-- Second input box -->
                 <div class="form-group d-flex justify-content-center mb-0" style="width: 100%;">
                   <div style="width: 80%">
-                    <%= f.input :location_2, label: false , placeholder: "Where’s your friend at?" %>
+                    <%= f.input :location_2, label: false , placeholder: "Where's your friend at?" %>
                   </div>
                 </div>
               </div>
             </div>
-
             <div class="d-flex flex-grow-1">
               <!-- <legend class="col-form-label pt-0"><abbr title="required"></abbr></legend> -->
               <input type="hidden" name="search[category][]" value="">
@@ -60,12 +41,10 @@
                       <input class="form-check-input check_boxes required d-none" type="checkbox" value="Restaurant" name="search[category][]" id="search_category_restaurant">
                       <label class="form-check-label collection_check_boxes text-center sizing-box" for="search_category_restaurant"><i style="font-size: 40px; color: #F8CF61;" class="fas fa-utensils cat-icon"></i></label>
                     </div>
-
                     <div class="form-check form-check-inline cat_btn">
                       <input class="form-check-input check_boxes required d-none" type="checkbox" value="Bar" name="search[category][]" id="search_category_bar">
                       <label class="form-check-label collection_check_boxes text-center sizing-box" for="search_category_bar"><i style="font-size: 40px; color: #F8CF61;" class="fas fa-cocktail cat-icon"></i></label>
                     </div>
-
                     <div class=" form-check form-check-inline cat_btn">
                       <input class="form-check-input check_boxes required d-none" type="checkbox" value="Coffeeshop" name="search[category][]" id="search_category_coffeeshop">
                       <label class="form-check-label collection_check_boxes text-center sizing-box" for="search_category_coffeeshop"><i style="font-size: 40px; color: #F8CF61;" class="fas fa-coffee cat-icon"></i></label>
@@ -73,20 +52,12 @@
                   </div>
               </fieldset>
             </div>
-
-
             <div style="height: 100%; padding: 0 10vw;">
-              <%= f.submit "Let’s go!", class: "btn btn-home btn-block submit-btn-yell mb-5" %>
+              <%= f.submit "Let's go!", class: "btn btn-home btn-block submit-btn-yell mb-5", id: "search-venues" %>
             </div>
           </div>
         <% end %>
-
-
-        </fieldset>
-        <%= f.submit "Search venues", class: "btn btn-home btn-block submit-btn-yell pb-4 pt-2", id: "search-venues" %>
-      <% end %>
     </div>
   </div>
 </div>
-
 
