--- a/app/views/venues/show.html.erb
+++ b/app/views/venues/show.html.erb
@@ -20,11 +20,12 @@
           </div> -->
           <h4 class="venue-title"><%= @venue.name %></h4>
           <!-- <p class="venue-title"><i class="far fa-heart"></i></p> -->
-           <% favourite_for_this_venue = current_user.favourites.find_by(venue: @venue) %>
             <div>
           <i class="fas fa-arrows-alt-v mt-3 mr-1 arrow-size show-full-screen" id= "show-arrow"></i>
         </div>
 
+          <% if current_user %>
+           <% favourite_for_this_venue = current_user.favourites.find_by(venue: @venue) %>
             <% if favourite_for_this_venue.nil? %>
               <%= link_to venue_favourites_path(@venue), method: :post do  %>
                 <p class="venue-title"><i class="far fa-heart"></i></p>
@@ -34,14 +35,19 @@
                 <p class="venue-title"><i class="fas fa-heart"></i></p>
               <% end %>
             <% end %>
+          <% else %>
+             <%= link_to venue_favourites_path(@venue), method: :post do  %>
+                <p class="venue-title"><i class="far fa-heart"></i></p>
+              <% end %>
+          <% end %>
         </div>
         <div >
           <img src="<%= @venue.photo %>" alt="" class="show-photo">
         </div>
         <div class="half-marker">
           <div class="times d-flex">
-            <p class="first-duration">32 mins</p>
-            <p class="second-duration">28 mins</p>
+            <p class="first-duration"><%= @venue.commute_one %></p>
+            <p class="second-duration"><%= @venue.commute_two %></p>
           </div>
           <img src="<%= asset_path('half_marker.png') %>" alt="">
         </div>
