--- a/app/assets/stylesheets/config/_fonts.scss
+++ b/app/assets/stylesheets/config/_fonts.scss
@@ -2,8 +2,8 @@
 @import url("https://fonts.googleapis.com/css?family=Open+Sans:400,300,700|Raleway:400,100,300,700,500");
 
 // Define fonts for body and headers
-$body-font: "Hind Siliguri", "Open Sans", "sans-serif";
-$headers-font: "Hind Siliguri","Raleway", "sans-serif";
+$body-font:  "Open Sans","Hind Siliguri", "sans-serif";
+$headers-font: "Raleway", "Hind Siliguri", "sans-serif";
 
 
 // To use a font file (.woff) uncomment following lines
