--- a/app/views/venues/_info_window.html.erb
+++ b/app/views/venues/_info_window.html.erb
@@ -1,3 +1,14 @@
-<div>
-  <h2><%= venue.name %></h2>
+<div class="card-product" style="">
+  <img class ="photo"src="<%= venue.photo %>" />
+  <div class="card-product-infos-window">
+    <div class="d-flex justify-content-between align-items-baseline">
+      <h6><strong><%= link_to venue.name, venue_path(venue)%></strong></h6>
+    </div>
+    <div class="d-flex justify-content-between align-items-baseline">
+      <span class="text-inside"><i class="far fa-star"></i> <%= venue.rating %> (<%= venue.review_count %>)</span>
+    </div>
+    <div class="d-flex">
+      <p><%= venue.comute_1 %> mins || venue.comute_2 %> mins</p>
+    </div>
+  </div>
 </div>
