--- a/app/views/venues/_info_window.html.erb
+++ b/app/views/venues/_info_window.html.erb
@@ -1,4 +1,4 @@
-<div class="card-product" style="">
+<div class="card-product" style="box-shadow: 0 0 0">
   <img class ="photo"src="<%= venue.photo %>" />
   <div class="card-product-infos-window">
     <div class="d-flex justify-content-between align-items-baseline">
@@ -8,7 +8,7 @@
       <span class="text-inside"><i class="far fa-star"></i> <%= venue.rating %> (<%= venue.review_count %>)</span>
     </div>
     <div class="d-flex">
-      <p><%= venue.comute_1 %> mins || venue.comute_2 %> mins</p>
+      <p><%= venue.commute_one %> mins || <%=venue.commute_two %> mins</p>
     </div>
   </div>
 </div>
