Add minutes to commute time

--- a/app/views/venues/show.html.erb
+++ b/app/views/venues/show.html.erb
@@ -46,8 +46,8 @@
         </div>
         <div class="half-marker">
           <div class="times d-flex">
-            <p class="first-duration"><%= @venue.commute_one %></p>
-            <p class="second-duration"><%= @venue.commute_two %></p>
+            <p class="first-duration"><%= @venue.commute_one %> mins</p>
+            <p class="second-duration"><%= @venue.commute_two %> mins</p>
           </div>
           <img src="<%= asset_path('half_marker.png') %>" alt="">
         </div>
