Change icon colour

--- a/app/assets/stylesheets/components/_card_product.scss
+++ b/app/assets/stylesheets/components/_card_product.scss
@@ -126,7 +126,8 @@
 }
 
 .active-cat-icon {
-  color: #F36B7F !important;
+  color: #F8CF61 !important;
+  font-size: 28px;
 }
 
 .submit-btn-yell {
