--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -39,15 +39,15 @@
                   <div class="d-flex w-100 justify-content-around mt-2 px-3">
                     <div class="form-check form-check-inline cat_btn">
                       <input class="form-check-input check_boxes required d-none" type="checkbox" value="Restaurant" name="search[category][]" id="search_category_restaurant">
-                      <label class="form-check-label collection_check_boxes text-center sizing-box" for="search_category_restaurant"><i style="font-size: 40px; color: #F8CF61;" class="fas fa-utensils cat-icon"></i></label>
+                      <label class="form-check-label collection_check_boxes text-center sizing-box" for="search_category_restaurant"><i style="font-size: 32px; color: #FFFFFF;" class="fas fa-utensils cat-icon"></i></label>
                     </div>
                     <div class="form-check form-check-inline cat_btn">
                       <input class="form-check-input check_boxes required d-none" type="checkbox" value="Bar" name="search[category][]" id="search_category_bar">
-                      <label class="form-check-label collection_check_boxes text-center sizing-box" for="search_category_bar"><i style="font-size: 40px; color: #F8CF61;" class="fas fa-cocktail cat-icon"></i></label>
+                      <label class="form-check-label collection_check_boxes text-center sizing-box" for="search_category_bar"><i style="font-size: 32px; color: #FFFFFF;" class="fas fa-cocktail cat-icon"></i></label>
                     </div>
                     <div class=" form-check form-check-inline cat_btn">
                       <input class="form-check-input check_boxes required d-none" type="checkbox" value="Coffeeshop" name="search[category][]" id="search_category_coffeeshop">
-                      <label class="form-check-label collection_check_boxes text-center sizing-box" for="search_category_coffeeshop"><i style="font-size: 40px; color: #F8CF61;" class="fas fa-coffee cat-icon"></i></label>
+                      <label class="form-check-label collection_check_boxes text-center sizing-box" for="search_category_coffeeshop"><i style="font-size: 32px; color: #FFFFFF;" class="fas fa-coffee cat-icon"></i></label>
                     </div>
                   </div>
               </fieldset>
