--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -8,7 +8,7 @@
   <div class="row home-box">
     <div class="d-flex flex-column" style="width: 100%;height: 100%;">
       <div class="flex-grow-1">
-        fremgioerng
+      <img style="width: 100%; padding-top: 26px;" src="<%= asset_path('title.png')%>">
       </div>
       <img style="width: 100%" src="<%= asset_path('home.png')%>">
         <!-- Bottom container -->
