added label for cats on homepage

--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -1,9 +1,6 @@
 .navbar-lewagon {
-  justify-content: space-between;
   background: white;
   width: 100%;
-  position: sticky;
-  bottom: 0;
 }
 
 .navbar-lewagon .navbar-collapse {
@@ -14,6 +11,9 @@
   width: 40px;
 }
 
-.algolia-autocomplete .algolia-docsearch-suggestion--subcategory-column {
-  color: gray;
+.navbar {
+  position: sticky;
+  top: 0;
+  z-index: 222;
+  border: 2px
 }
