--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -52,8 +52,9 @@
                   </div>
               </fieldset>
             </div>
+            <h4 class="text-white text-center">Select categories</h4>
             <div style="height: 100%; padding: 0 10vw;">
-              <%= f.submit "Let's go!", class: "btn btn-home btn-block submit-btn-yell mb-5", id: "search-venues" %>
+              <%= f.submit "Let's go!", class: "btn btn-home btn-block submit-btn-yell mb-5 mt-3", id: "search-venues" %>
             </div>
           </div>
         <% end %>
