Arthur doing a commit on master 😱

--- a/app/assets/javascripts/manifest.json.erb
+++ b/app/assets/javascripts/manifest.json.erb
@@ -1,5 +1,12 @@
 {
   "background_color": "#F36B7F",
+  "action": "/share-target/",
+  "params":
+    {
+      "title": "title",
+      "text": "text",
+      "url": "url"
+    }
   "description": "Something nice",
   "display": "fullscreen",
   "icons": [
