Improve share functionality

--- a/app/assets/javascripts/manifest.json.erb
+++ b/app/assets/javascripts/manifest.json.erb
@@ -7,7 +7,7 @@
       "text": "text",
       "url": "url"
     }
-  "description": "Meet me halfway",
+  "description": "Meet me halfway!",
   "display": "fullscreen",
   "icons": [
     {
