nav bar well positioned - fixed

--- a/app/views/favourites/index.html.erb
+++ b/app/views/favourites/index.html.erb
@@ -15,7 +15,7 @@
       <a href="/#"><i class="fas fa-arrow-circle-left m-2 p-1" id="back"></i></a>
     </div>
 
-    <div class="container card-design" id="transition">
+    <div class="container card-design" style="padding-bottom: 56px;" id="transition">
       <div class="d-flex justify-content-between pl-2 pr-2 pt-3">
           <h4 class=""><strong>Favourites</strong></h4>
           <i class="fas fa-arrows-alt-v arrow-size" id= "arrow"></i>
