--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -12,8 +12,11 @@
 }
 
 .navbar {
-  position: sticky;
-  top: 0;
+  position: fixed;
+  bottom: 0;
   z-index: 222;
-  border: 2px
+  border: 2px;
+  left: 0;
 }
+
+
