--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -1,14 +1,21 @@
 // Specific CSS for your home-page
+body {
+  background-color: white;
+  padding-bottom: 56px !important;
+}
+
+
 .form-container{
   background-color: white;
   box-shadow: 0px 10px 30px rgba(0,0,0,0.1);
   padding:25px;
   min-height: 50vh;
   padding: 0;
+  height: 100%;
 }
 
 .home-box{
-  height: calc(100vh - 56px); //100vh -66px is for the navbar
+  // height: calc(100vh - 56px); //100vh -66px is for the navbar
   // align-items: flex-end;
   display: flex;
   justify-content: center;
@@ -32,9 +39,6 @@
   background-repeat: no-repeat; /* Do not repeat the image */
   // height: 50vh;
   padding-top: 173%;
-
-
 }
 
-.loading-content{
-}
+
