--- a/app/assets/stylesheets/pages/_venues_show.scss
+++ b/app/assets/stylesheets/pages/_venues_show.scss
@@ -98,6 +98,12 @@
     padding-right: 4%;
   }
 }
+
+
+.padding-bottom {
+  padding-bottom: 56px;
+}
+
 // .venue-container{
 //   background-color:white;
 //   height: 100%;
