--- a/app/views/venues/index.html.erb
+++ b/app/views/venues/index.html.erb
@@ -13,13 +13,13 @@
       data-mapbox-api-key="<%= ENV['MAPBOX_API_KEY'] %>"
     ></div>
 
-      <div style="z-index: 1;">
+    <div style="z-index: 1;">
       <a href="/#"><i class="fas fa-arrow-circle-left m-2 p-1" id="back"></i></a>
     </div>
 
 
 
-    <div class="container card-design" id="transition">
+    <div class="container card-design padding-bottom" id="transition">
       <div class="d-flex justify-content-between pl-2 pr-2 pt-3">
           <h4 class=""><strong>Our Recommendations</strong></h4>
           <i class="fas fa-arrows-alt-v arrow-size" id= "arrow"></i>
@@ -72,4 +72,9 @@
       <% end %>
 
     </div>
+
+
+
+
   </div>
+</div>
