changed homepage icons

--- a/app/assets/stylesheets/components/_card_product.scss
+++ b/app/assets/stylesheets/components/_card_product.scss
@@ -126,8 +126,12 @@
 }
 
 .active-cat-icon {
-  color: #F8CF61 !important;
-  font-size: 28px;
+  // color: #F8CF61 !important;
+  // font-size: 28px;
+
+  // > * {
+  //   fill: pink;
+  // }
 }
 
 .submit-btn-yell {
