--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -38,3 +38,30 @@
 
 .loading-content{
 }
+
+.svg-icon {
+  height: 50px;
+
+  > * {
+    fill: white;
+  }
+}
+
+.active-cat-icon {
+  > * {
+    fill: #F8CF61;
+  }
+}
+
+.svg-cocktail {
+  height: 40px;
+}
+
+.svg-burger {
+    padding-bottom: 0px;
+    padding-top: 6px;
+}
+
+.svg-coffee {
+  height: 45px;
+}
