--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -39,15 +39,108 @@
                   <div class="d-flex w-100 justify-content-around mt-2 px-3">
                     <div class="form-check form-check-inline cat_btn">
                       <input class="form-check-input check_boxes required d-none" type="checkbox" value="Restaurant" name="search[category][]" id="search_category_restaurant">
-                      <label class="form-check-label collection_check_boxes text-center sizing-box" for="search_category_restaurant"><i style="font-size: 32px; color: #FFFFFF;" class="fas fa-utensils cat-icon"></i></label>
+                      <label class="form-check-label collection_check_boxes text-center sizing-box" for="search_category_restaurant">
+                        <svg class="svg-icon svg-burger" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 1000 1000" enable-background="new 0 0 1000 1000" xml:space="preserve">
+                        <metadata> Svg Vector Icons : http://www.onlinewebfonts.com/icon </metadata>
+                        <g><g transform="translate(0.000000,511.000000) scale(0.100000,-0.100000)"><path d="M4432.6,4131.7C2717.3,3951,1345.1,3359.9,628.4,2496.1c-229.7-275.7-428.8-686.1-487-1010.8C55.6,1025.9,120,731.8,361.9,486.8l110.3-110.3l-113.3-94.9C144.5,107,40.3-242.2,141.4-441.3c64.3-119.5,242-269.6,352.2-294.1c82.7-18.4,95-33.7,95-116.4c0-122.5,98-287.9,199.1-333.9c95-42.9,95-67.4,0-110.3c-159.3-73.5-202.2-199.1-196-585l3.1-346.1l-116.4-55.1c-147-64.3-300.2-232.8-349.2-385.9C0.5-3054,312.9-3626.7,766.2-3838.1l174.6-82.7h4058.4h4058.4l174.6,82.7C9685.6-3626.7,9998-3054,9869.4-2668c-49,153.1-202.1,321.6-349.2,385.9l-116.4,55.1l3.1,346.1c6.1,385.9-36.8,511.5-196,585c-94.9,42.9-94.9,67.4,0,110.3c101.1,45.9,199.1,211.4,199.1,333.9c0,82.7,12.3,98,94.9,116.4C9707-689.4,9900-441.3,9900-223.8c0,150.1-128.7,398.2-260.4,505.4l-113.3,94.9l110.3,110.3c242,245,309.3,545.2,220.5,1001.6c-64.3,327.7-263.4,741.2-490.1,1013.8C8733,3268,7501.7,3849.9,6040.7,4073.5C5731.3,4119.5,4689.9,4159.3,4432.6,4131.7z M6037.6,3828.5C7226,3657,8301.1,3206.7,8932.1,2615.6c367.6-343,575.8-689.2,673.9-1121c113.3-508.4,18.4-814.7-303.3-961.8c-116.4-55.1-303.2-58.2-4303.5-58.2c-3991,0-4187.1,3.1-4303.5,58.2c-263.4,119.5-370.6,340-343.1,713.7c39.8,483.9,232.8,872.9,634,1283.4c725.9,735.1,1874.5,1188.4,3445.8,1356.9C4689.9,3914.3,5703.7,3877.5,6037.6,3828.5z M9406.9,152.9c147-85.8,220.5-199.1,238.9-361.4c15.3-119.5,6.1-150.1-61.3-217.5c-119.5-119.5-251.2-107.2-370.6,33.7C8932.1-55.3,8803.5,15.1,8567.6-27.8c-104.2-21.4-205.2-104.2-438-364.5c-137.8-156.2-254.2-156.2-385.9,0C7461.9-55.3,7333.3,15.1,7097.4-27.8c-104.2-21.4-205.2-104.2-438-364.5c-137.8-156.2-254.3-156.2-386,0C5991.6-55.3,5863,15.1,5627.2-27.8c-104.2-21.4-205.2-104.2-438-364.5c-137.9-156.2-254.3-156.2-386,0C4521.4-55.3,4392.8,15.1,4156.9-27.8c-104.1-21.4-205.2-104.2-438-364.5c-137.8-156.2-254.2-156.2-385.9,0C3051.2-55.3,2922.6,15.1,2686.7-27.8c-104.1-21.4-205.2-104.2-438-364.5c-137.8-156.2-254.2-156.2-385.9,0C1581-55.3,1452.3,15.1,1216.5-27.8c-104.1-21.4-205.2-104.2-438-364.5C656-530.1,533.5-542.4,420.1-429C300.7-312.6,334.4-52.3,490.6,85.5c162.3,147,27.6,140.9,4554.6,134.8C9241.5,214.2,9302.7,214.2,9406.9,152.9z M1519.7-373.9c281.8-336.9,410.4-407.4,646.3-364.5c107.2,21.5,232.8,128.7,431.9,364.5c131.7,156.2,260.4,156.2,392.1,0c281.8-336.9,410.4-407.4,646.3-364.5c107.2,21.5,232.8,128.7,431.9,364.5c73.5,88.8,116.4,113.3,196,113.3c79.6,0,122.5-24.5,196-113.3c281.8-336.9,410.4-407.4,646.3-364.5c107.2,21.5,232.8,128.7,431.9,364.5c131.7,156.2,260.4,156.2,392.1,0c281.8-336.9,410.4-407.4,646.3-364.5c107.2,21.5,232.8,128.7,431.9,364.5c131.7,156.2,260.3,156.2,392.1,0c199.1-235.8,324.7-343,431.9-364.5c235.8-42.9,364.5,27.5,646.3,364.5c131.7,156.2,260.4,156.2,392.1,0c52-61.3,140.9-159.3,196-217.5c73.5-79.6,98-131.7,98-217.5c0-61.3-15.3-128.7-36.8-150.1c-52.1-52.1-8205.7-52.1-8257.7,0c-21.4,21.4-36.8,88.8-36.8,150.1c0,85.8,24.5,137.8,101.1,217.5c52.1,58.2,140.9,156.2,193,217.5C1259.4-217.7,1388-217.7,1519.7-373.9z M3979.3-1936L3284-2634.4L2588.7-1936l-698.3,695.3H3284h1393.6L3979.3-1936z M7409.8-1936l-695.3-698.3L6019.2-1936l-698.3,695.3h1393.7h1393.6L7409.8-1936z M2104.8-1853.3l367.6-367.6h-784.1c-566.6,0-790.2,9.2-817.8,36.8c-49,49-49,612.6,0,661.6c24.5,24.5,168.5,36.8,453.3,36.8h413.5L2104.8-1853.3z M5535.3-1853.3l367.5-367.6h-903.6h-903.6l367.6,367.6l367.6,367.5h168.5h168.5L5535.3-1853.3z M9128.1-1522.5c49-49,49-612.6,0-661.6c-27.5-27.6-251.2-36.8-817.8-36.8h-784.1l367.6,367.6l367.5,367.5h413.5C8959.7-1485.8,9103.6-1498,9128.1-1522.5z M2980.8-2726.2c144-144,281.8-260.4,303.2-260.4c21.4,0,159.3,116.4,303.2,260.4l266.5,260.4h1145.5h1145.5l266.5-260.4c144-144,281.8-260.4,303.3-260.4c21.4,0,159.3,116.4,303.2,260.4l266.5,260.4h1050.6c876,0,1062.8-6.1,1136.3-45.9c272.6-140.9,235.8-615.6-73.5-921.9c-272.6-275.7,58.2-257.3-4398.4-257.3c-4456.6,0-4125.8-18.4-4398.4,257.3c-306.3,303.2-346.1,774.9-79.6,918.9c67.4,39.8,263.4,45.9,1136.4,49h1056.7L2980.8-2726.2z"/><path d="M4585.7,3093.4c-49-45.9-76.6-110.3-76.6-168.5c0-116.4,119.5-245,229.7-245s229.7,128.6,229.7,245s-119.5,245-229.7,245C4696,3170,4625.6,3136.3,4585.7,3093.4z"/><path d="M7281.2,2848.3c-49-45.9-76.6-110.3-76.6-168.5c0-116.4,119.5-245,229.7-245s229.7,128.7,229.7,245c0,116.4-119.5,245-229.7,245C7391.4,2924.9,7321,2891.2,7281.2,2848.3z"/><path d="M2135.4,2358.3c-49-45.9-76.6-110.3-76.6-168.5c0-116.4,119.5-245,229.7-245s229.7,128.7,229.7,245s-119.5,245-229.7,245C2245.7,2434.9,2175.2,2401.2,2135.4,2358.3z"/><path d="M5811,2358.3c-49-45.9-76.6-110.3-76.6-168.5c0-116.4,119.4-245,229.7-245c110.3,0,229.7,128.7,229.7,245s-119.5,245-229.7,245C5921.2,2434.9,5850.8,2401.2,5811,2358.3z"/><path d="M3605.6,1623.2c-49-45.9-76.6-110.3-76.6-168.5c0-116.4,119.5-245,229.7-245c110.3,0,229.7,128.7,229.7,245s-119.5,245-229.7,245C3715.9,1699.7,3645.4,1666,3605.6,1623.2z"/><path d="M910.2,1378.1c-49-45.9-76.6-110.3-76.6-168.5c0-116.4,119.5-245,229.7-245c110.3,0,229.7,128.7,229.7,245s-119.5,245-229.7,245C1020.5,1454.7,950,1421,910.2,1378.1z"/><path d="M8506.4,1378.1c-49-45.9-76.6-110.3-76.6-168.5c0-116.4,119.5-245,229.7-245s229.7,128.7,229.7,245s-119.5,245-229.7,245C8616.6,1454.7,8546.2,1421,8506.4,1378.1z"/></g></g>
+                        </svg>
+                        <!-- <i style="font-size: 32px; color: #FFFFFF;" class="fas fa-utensils cat-icon"></i> -->
+                      </label>
                     </div>
                     <div class="form-check form-check-inline cat_btn">
                       <input class="form-check-input check_boxes required d-none" type="checkbox" value="Bar" name="search[category][]" id="search_category_bar">
-                      <label class="form-check-label collection_check_boxes text-center sizing-box" for="search_category_bar"><i style="font-size: 32px; color: #FFFFFF;" class="fas fa-cocktail cat-icon"></i></label>
+                      <label class="form-check-label collection_check_boxes text-center sizing-box" for="search_category_bar">
+                        <svg class="svg-icon svg-cocktail" version="1.1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 463.002 463.002" xmlns:xlink="http://www.w3.org/1999/xlink" enable-background="new 0 0 463.002 463.002">
+                          <g>
+                            <path d="m403.774,72.383c3.595-4.574 4.248-10.666 1.705-15.898s-7.737-8.483-13.555-8.483h-56.223c0.136-10.454-5.002-20.478-13.66-26.455l4.44-11.303c1.515-3.855-0.383-8.208-4.238-9.723-3.854-1.514-8.208,0.382-9.723,4.238l-4.507,11.472c-13.903-1.682-27.761,6.13-33.119,19.758l-4.695,12.012h-199.121c-5.818,0-11.012,3.251-13.555,8.483s-1.89,11.324 1.704,15.898l164.774,209.712v117.406c0,26.743-21.757,48.5-48.5,48.5h-24c-4.142,0-7.5,3.357-7.5,7.5s3.358,7.5 7.5,7.5h160c4.142,0 7.5-3.357 7.5-7.5s-3.358-7.5-7.5-7.5h-24c-26.743,0-48.5-21.757-48.5-48.5v-117.404l164.773-209.713zm-135.006,70.619c7.803,0 11.302,1.498 15.731,3.395 5.042,2.159 10.756,4.605 21.636,4.605 9.586,0 15.161-1.899 19.8-3.828l-94.434,120.189-94.44-120.18c4.629,1.926 10.195,3.819 19.755,3.819 10.866,0 16.573-2.447 21.608-4.607 4.419-1.896 7.91-3.393 15.695-3.393 7.787,0 11.278,1.497 15.698,3.393 5.036,2.16 10.743,4.607 21.61,4.607 10.875,0 16.585-2.447 21.625-4.606 4.424-1.896 7.92-3.394 15.716-3.394zm20.092-101.538c3.327-8.464 12.926-12.64 21.395-9.318 6.577,2.585 10.63,9.072 10.441,15.855h-34.391l2.555-6.537zm-217.782,21.538l320.871-.019c0.026,0.023 0.059,0.091 0.031,0.133l-51.023,64.938c-9.25,0.349-14.46,2.57-19.092,4.553-4.429,1.896-7.928,3.395-15.731,3.395-7.804,0-11.302-1.498-15.731-3.395-2.982-1.277-6.21-2.651-10.593-3.564l15.243-38.8c1.515-3.855-0.383-8.208-4.238-9.723-3.856-1.513-8.209,0.383-9.723,4.238l-17.057,43.418c-7.901,0.59-12.642,2.61-16.892,4.431-4.425,1.896-7.92,3.394-15.716,3.394-7.787,0-11.278-1.497-15.698-3.393-5.036-2.16-10.743-4.607-21.61-4.607-10.867,0-16.573,2.447-21.608,4.607-4.419,1.896-7.91,3.393-15.695,3.393-7.789,0-11.28-1.497-15.702-3.394-4.629-1.984-9.836-4.207-19.085-4.554l-51.036-64.945c0.002-0.034 0.034-0.102 0.085-0.106zm175.499,385h-30.151c6.123-5.175 11.259-11.48 15.076-18.599 3.815,7.118 8.951,13.424 15.075,18.599z"/>
+                            <path d="m249.663,164.759l-25.143,64c-1.515,3.855 0.383,8.208 4.238,9.723 0.9,0.354 1.828,0.521 2.74,0.521 2.994,0 5.822-1.805 6.982-4.76l25.143-64c1.515-3.855-0.383-8.208-4.238-9.723-3.854-1.512-8.207,0.383-9.722,4.239z"/>
+                          </g>
+                        </svg>
+                        <!-- <i style="font-size: 32px; color: #FFFFFF;" class="fas fa-cocktail cat-icon"></i> -->
+                      </label>
                     </div>
                     <div class=" form-check form-check-inline cat_btn">
                       <input class="form-check-input check_boxes required d-none" type="checkbox" value="Coffeeshop" name="search[category][]" id="search_category_coffeeshop">
-                      <label class="form-check-label collection_check_boxes text-center sizing-box" for="search_category_coffeeshop"><i style="font-size: 32px; color: #FFFFFF;" class="fas fa-coffee cat-icon"></i></label>
+                      <label class="form-check-label collection_check_boxes text-center sizing-box" for="search_category_coffeeshop">
+                        <svg class="svg-icon svg-coffee" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+                             viewBox="0 0 463 463" style="enable-background:new 0 0 463 463;" xml:space="preserve">
+                          <g transform="translate(0 -540.36)">
+                            <g>
+                              <g>
+                                <path d="M263.9,687.709L263.9,687.709c1,0,2-0.2,2.6-0.7c3.2-1.4,13.8-6.5,17.3-13.3c7.9-14.2,4.2-29.6-0.6-45.4
+                                  c-2.9-11.9-0.5-24.9,6.6-35.7c7.4-11.3,19.1-18.9,32.1-21c11.8-1.7,24.6,1.7,34.4,9.1c8.7,6.5,14.2,15.6,15.6,25.6
+                                  c0,0.1,0,0.1,0,0.2c1.7,10.6-1.1,21.9-7.5,30.2c-3.9,5.1-10.9,11.3-21.9,12.4c-0.2,0-0.4,0.1-0.6,0.1c-7.3,1.4-15.2-0.5-21.6-5.2
+                                  c-6.5-4.8-10.9-11.9-11.8-19.5v-0.1c-1-6.9,0.8-13.8,4.9-18.9c2.6-3.1,7.1-7,14.4-7.5c0.1,0,0.1,0,0.2,0c4.8-0.5,10,1.2,13.6,4.4
+                                  c2,1.8,4.3,4.8,4.3,9.3c0,2.9-1.5,6.2-3.6,7.6c-1.1,0.8-2.2,0.9-3.6,0.4c-3.9-1.4-8.2,0.5-9.7,4.4c-1.4,3.9,0.5,8.2,4.4,9.7
+                                  c6.1,2.2,12.3,1.5,17.5-2.1c6.1-4.2,10.1-12,10.1-19.9c0-7.8-3.2-15-9.2-20.4c-6.6-6.1-16-9.2-25-8.3c-9.9,0.7-18.7,5.3-24.9,13
+                                  c-6.7,8.3-9.7,19.4-8.1,30.4c1.5,11.6,8,22.5,17.9,29.7c9.6,7.1,21.6,9.9,32.9,7.9c12.6-1.4,23.9-7.8,31.9-18.1
+                                  c9-11.7,12.8-26.8,10.5-41.6c-1.9-13.9-9.5-26.5-21.4-35.5c-13.1-9.9-29.7-14.3-45.6-12h-0.1c-17.1,2.7-32.6,12.7-42.3,27.5
+                                  c-9.5,14.3-12.6,31.7-8.6,47.8c0,0.1,0.1,0.3,0.1,0.4c4.8,15.6,6.6,25.7,1.9,34.1c0,0.1-0.1,0.1-0.1,0.2
+                                  c-0.9,1.4-5.8,4.6-10.1,6.5c-3.8,1.7-5.5,6.1-3.8,9.9C258.3,686.009,261,687.709,263.9,687.709z"/>
+                                <path d="M443.1,922.309H314.5c29.2-15.2,53.5-38,70.6-65.6c5.7,5.9,13,10.3,20.9,12.4c3.8,1,7.7,1.6,11.5,1.6
+                                  c7.1,0,14.1-1.8,20.3-5.3c21.9-10.5,31.3-37.2,20.8-59.7l-0.3-0.5c-9.8-17.2-28.4-25.9-46.7-23.2c1.1-8.4,1.6-16.9,1.6-25.6
+                                  c0-0.4,0-0.8,0-1.2c0-15.1-19.2-27.3-56.9-36.3c-33.6-8-78-12.4-124.8-12.4c-9.8,0-19.4,0.2-28.9,0.6c2.4-8.7,9.4-16.8,19.4-27.9
+                                  c11.8-12.5,17.6-29.4,16.5-47.6c-1.3-20.6-11.2-40-27.2-53.1c-0.1-0.1-0.2-0.1-0.2-0.2c-14.5-10.9-33.1-15.7-51.1-13.1
+                                  c-16.5,2.4-30.8,10.6-40.3,23.3l-0.1,0.1c-19.3,26.8-14.7,63.4,10.4,81.5c11.3,8.3,25.9,11.7,40,9.3c13.1-2.2,24.3-9.2,31.6-19.7
+                                  c7-9.4,9.7-22.1,7.3-33.8c-2.3-11.1-8.8-20.2-18.3-25.7c-9.2-5.5-21-7.1-30.7-4c-7.7,2.4-13.8,7.6-17.1,14.6
+                                  c-4.1,7.4-4.4,16.8-0.7,24c3.1,6.1,8.5,9.8,15.3,10.6c4.1,0.5,7.8-2.5,8.3-6.6s-2.5-7.8-6.6-8.3c-1.7-0.2-2.8-1-3.6-2.5
+                                  c-1.4-2.7-1.2-7.1,0.5-10.1c0.1-0.2,0.2-0.4,0.3-0.6c1.5-3.3,4.2-5.6,8-6.8c5.7-1.8,13-0.7,18.6,2.6l0.1,0.1
+                                  c5.8,3.3,9.7,8.9,11.2,15.8c1.6,7.6-0.2,15.8-4.7,21.9c-0.1,0.1-0.1,0.2-0.2,0.3c-4.9,7.2-12.7,12-21.8,13.6
+                                  c-10.1,1.7-20.5-0.7-28.6-6.7c-18.4-13.3-21.5-40.5-7.1-60.6c7.1-9.5,17.9-15.6,30.3-17.4c14-2,28.6,1.7,39.9,10.2
+                                  c12.5,10.3,20.6,26.2,21.6,42.4c0.9,14.1-3.5,27-12.5,36.4l-0.1,0.1c-11.1,12.2-21.6,23.8-23.9,38.8c-30.3,1.9-58.1,5.6-80.9,11
+                                  c-37.5,8.9-56.5,21.1-56.5,36.3c0,0.5,0,1,0.1,1.5c0,70.7,38.6,134,97.9,165.7H19.9c-11.6,0-19.9,8.4-19.9,20s8.4,20,19.9,20H55
+                                  l22.4,14.6c6.6,6.2,16.8,10.3,25.9,10.3h256.4c9.3,0,18.3-3.4,26.9-10.2l21.5-14.8h35c11,0,19.9-9,19.9-20
+                                  S454.1,922.309,443.1,922.309z M408.8,798.009c13.7-4.5,28.7,1.2,36.3,14.2h0c6.9,15.1,0.6,32.9-13.9,39.7l-0.5,0.3
+                                  c-6.2,3.5-13.5,4.4-20.7,2.5c-6.8-1.9-12.9-6.1-17.1-11.9C400,828.809,405.4,813.709,408.8,798.009z M64.9,754.709
+                                  c0.8-3.7,9.9-13,44.8-21.3v0c22.1-5.3,49.3-8.9,79-10.7c2.2,5.3,5.6,10.1,6.9,12c1.5,2,3.7,3,6,3c1.6,0,3.1-0.5,4.5-1.5
+                                  c3.3-2.5,4-7.2,1.5-10.5c-0.9-1.2-1.7-2.5-2.5-3.8c8.6-0.3,17.5-0.5,26.4-0.5c45.7,0,88.8,4.2,121.3,12
+                                  c35.6,8.5,44.6,17.8,45.4,21.3c0,0.3,0,0.6,0,0.9c-0.5,2.6-5.7,8.5-23.2,14.9c-3.2-4.9-10.4-8.6-22.9-11.8
+                                  c-11.9-3.1-27.9-5.6-46.4-7.1c-46.3-5-104.6-5-148.4,0c-18.9,2.1-34,4.6-44.9,7.5c-12.6,3.4-19.5,7.1-22.5,12.2
+                                  c-18.8-6.5-24.4-12.7-25-15.5C64.9,755.409,64.9,755.109,64.9,754.709z M357,775.809c-1.3,0.3-2.7,0.7-4.1,1
+                                  c-32.5,7.7-75.6,12-121.3,12c-46.2,0-89.4-4.2-121.8-12c-0.8-0.2-1.5-0.4-2.3-0.6c6.3-2.5,20.4-6.5,51.5-10
+                                  c42.9-4.9,99.8-4.9,145.2,0c0.1,0,0.1,0,0.2,0C333.4,768.809,349.4,772.809,357,775.809z M66,776.809
+                                  c9.4,5.5,22.8,10.4,40.3,14.6c33.5,8,78,12.4,125.2,12.4c46.8,0,91.1-4.4,124.8-12.4c17.7-4.2,31.3-9.1,40.8-14.7
+                                  c-7.8,69.8-56.4,127.9-124.3,145.6h-85.1C121.4,903.609,73.8,845.609,66,776.809z M377.8,964.809L377.8,964.809
+                                  c-0.2,0.1-0.3,0.2-0.4,0.3c-5.9,4.8-11.7,7.1-17.7,7.1H103.3c-5.3,0-12.1-2.8-15.8-6.5c-0.4-0.4-0.8-0.7-1.2-1l-3.7-2.4h299
+                                  L377.8,964.809z M443.1,947.209h-37.4H20c-3.3,0-4.9-1.6-4.9-5s1.6-5,4.9-5h423.1c2,0,4.9,1.6,4.9,5
+                                  C448,945.709,445,947.209,443.1,947.209z"/>
+                              </g>
+                            </g>
+                          </g>
+                          <g>
+                          </g>
+                          <g>
+                          </g>
+                          <g>
+                          </g>
+                          <g>
+                          </g>
+                          <g>
+                          </g>
+                          <g>
+                          </g>
+                          <g>
+                          </g>
+                          <g>
+                          </g>
+                          <g>
+                          </g>
+                          <g>
+                          </g>
+                          <g>
+                          </g>
+                          <g>
+                          </g>
+                          <g>
+                          </g>
+                          <g>
+                          </g>
+                          <g>
+                          </g>
+                          </svg>
+                        <!-- <svg class="svg-icon" id="cup" version="1.1" viewBox="0 0 32 32" xml:space="preserve" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"><g><path d="M24.6,25h0.9c2.5,0,4.5-2,4.5-4.5c0-2.3-1.8-4.2-4-4.4V15c0-0.6-0.4-1-1-1H7c-0.6,0-1,0.4-1,1v5c0,3.3,1.6,6.2,4,8H5   c-0.6,0-1,0.4-1,1s0.4,1,1,1h22c0.6,0,1-0.4,1-1s-0.4-1-1-1h-5C23.1,27.2,24,26.2,24.6,25z M28,20.5c0,1.4-1.1,2.5-2.5,2.5   c0.3-0.9,0.5-2,0.5-3v-1.9C27.1,18.3,28,19.3,28,20.5z M24,16v2.4c-1.1,0.5-4.1,1.4-7.6-0.3c-3.5-1.7-6.6-0.8-8.4,0.1V16H24z    M8,20.5c1-0.7,4-2.3,7.5-0.6c1.8,0.9,3.5,1.1,5,1.1c1.4,0,2.6-0.3,3.5-0.5c-0.1,1-0.3,2-0.7,2.8c-0.1,0.1-0.2,0.3-0.2,0.4   c-1.4,2.5-4,4.2-7,4.2C11.8,28,8.3,24.7,8,20.5z"/><path d="M11,11h3c0.3,0,0.5,0.2,0.5,0.5V12c0,0.6,0.4,1,1,1s1-0.4,1-1v-0.5c0-1.4-1.1-2.5-2.5-2.5h-3c-0.3,0-0.5-0.2-0.5-0.5   S10.7,8,11,8h9.5c1.7,0,3-1.3,3-3s-1.3-3-3-3h-10c-0.6,0-1,0.4-1,1s0.4,1,1,1h10c0.6,0,1,0.4,1,1s-0.4,1-1,1H11   C9.6,6,8.5,7.1,8.5,8.5S9.6,11,11,11z"/></g></svg> -->
+                        <!-- <i style="font-size: 32px; color: #FFFFFF;" class="fas fa-coffee cat-icon"></i> -->
+                      </label>
                     </div>
                   </div>
               </fieldset>
