Marco pushing to master 😱

--- a/app/assets/javascripts/manifest.json.erb
+++ b/app/assets/javascripts/manifest.json.erb
@@ -6,7 +6,8 @@
       "title": "title",
       "text": "text",
       "url": "url"
-    }
+    },
+  "description": "Meet me halfway!",
   "display": "fullscreen",
   "icons": [
     {
