Added dir at the beginning of the gmaps url

--- a/app/views/venues/show.html.erb
+++ b/app/views/venues/show.html.erb
@@ -33,7 +33,7 @@
       </div>
       <div class="actions d-flex justify-content-around m-2">
         <div class="icon-text d-flex flex-column align-items-center">
-          <a class="icons walk" href="https://www.google.com/maps/place/ <%= @venue.address %>"><i class="fas fa-walking"></i></a>
+          <a class="icons walk" href="https://www.google.com/maps/dir// <%= @venue.address %>"><i class="fas fa-walking"></i></a>
           <p>Let's go</p>
         </div>
         <div class="icon-text d-flex flex-column align-items-center">
