--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -5,7 +5,7 @@
     <%= link_to favourites_path, class: "navbar-brand" do %>
     <i class="far fa-heart"></i>
     <% end %>
-    <%= link_to favourites_path, class: "navbar-brand" do %>
+    <%= link_to welcome_index_path, class: "navbar-brand" do %>
     <i class="far fa-envelope"></i>
     <% end %>
      <%= link_to favourites_path, class: "navbar-brand" do %>
