added back button to venues on Show page

--- a/app/views/venues/index.html.erb
+++ b/app/views/venues/index.html.erb
@@ -14,7 +14,7 @@
     ></div>
 
     <div style="z-index: 1;">
-      <a href="/#"><i class="fas fa-arrow-circle-left m-2 p-1" id="back"></i></a>
+      <a href="www.google.com"><i class="fas fa-arrow-circle-left m-2 p-1" id="back"></i></a>
     </div>
 
 
