--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,34 +1,41 @@
-<h2>Edit <%= resource_name.to_s.humanize %></h2>
-
-<%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
-  <%= f.error_notification %>
-
-  <div class="form-inputs">
-    <%= f.input :email, required: true, autofocus: true %>
-
-    <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
-      <p>Currently waiting confirmation for: <%= resource.unconfirmed_email %></p>
-    <% end %>
-
-    <%= f.input :password,
-                hint: "leave it blank if you don't want to change it",
-                required: false,
-                input_html: { autocomplete: "new-password" } %>
-    <%= f.input :password_confirmation,
-                required: false,
-                input_html: { autocomplete: "new-password" } %>
-    <%= f.input :current_password,
-                hint: "we need your current password to confirm your changes",
-                required: true,
-                input_html: { autocomplete: "current-password" } %>
+<head class="profile-head">
+  <div >
+    <h2 class="profile-title">Hi, I'm <%= @user.first_name %></h2>
   </div>
+</head>
 
-  <div class="form-actions">
-    <%= f.button :submit, "Update" %>
-  </div>
-<% end %>
+<div class="profile-card">
+  <body class="profile-body">
+    <div class="profile-info">
+      <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
+        <%= f.error_notification %>
+        <div class="profile-photo">
+          <% if @user.avatar.attached? %>
+            <%= cl_image_tag(@user.avatar.key, class: "profile-rounded-circle") %>
+          <% else %>
+            <%= image_tag "http://taysidereusers.co.uk/wp-content/plugins/all-in-one-seo-pack/images/default-user-image.png", style: "width: 400px", class: "profile-rounded-circle" %>
+           <% end %>
+        </div>
 
-<h3>Cancel my account</h3>
+
+      <div class="profile-user-info" style="text-align: center;">
+          <p><%= @user.first_name %> <%= @user.last_name %></p>
+        <div class="profile-dob">
+          <%= @user.dob.strftime("%d %B %Y") %>
+        </div>
+
+        <div class="form-inputs" style="margin-top: 20px;">
+          <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
+            <p>Currently waiting confirmation for: <%= resource.unconfirmed_email %></p>
+          <% end %>
+          <%= f.input :avatar, as: :file, label: false %>
+        </div>
+      </div>
+      <div class="form-actions">
+        <%= f.button :submit, class: "btn btn-ghost" %>
+      </div>
+      <% end %>
+      </div>
 
 <p>Unhappy? <%= link_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete %></p>
 
