css changes on profile page

--- a/app/assets/stylesheets/pages/_profile.scss
+++ b/app/assets/stylesheets/pages/_profile.scss
@@ -1,6 +1,9 @@
 .profile-title {
-  font-size: 20px;
-  color: black;
+  color: #2B292D;
+  padding-top: 70px;
+  font-size: 30px;
+  margin-bottom: 0px;
+  padding-bottom: 40px;
 }
 
 .profile-body {
