--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,6 +1,6 @@
 <head class="profile-head">
   <div >
-    <h2 class="profile-title">Hello <%= @user.first_name %></h2>
+    <h2 class="profile-title">Hello <%= @user.first_name %>!</h2>
   </div>
 </head>
 
@@ -26,7 +26,7 @@
           <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
             <p>Currently waiting confirmation for: <%= resource.unconfirmed_email %></p>
           <% end %>
-          <%= f.input :avatar, as: :file, label: false %>
+          <%= f.input :avatar, as: :file, label: 'Wanna update your profile picture?', class: "btn btn-home btn-block submit-btn-yell" %>
         </div>
     </div>
     <div class="form-actions">
