Worked on homepage design

--- a/app/assets/stylesheets/components/_button.scss
+++ b/app/assets/stylesheets/components/_button.scss
@@ -47,8 +47,7 @@
   border-radius: 4px;
   background: #63ADF2;
   transition: background 0.3s ease;
-  font-weight: bold;
-  width: 100%;
+  font-weight: 700;
 }
 
 #back {
