--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -1,10 +1,36 @@
 // Specific CSS for your home-page
 body {
-  background-color: white;
+  background-color: #FEFAEF;
   padding-bottom: 56px !important;
 }
 
 
+h1{
+  font-size: 20px;
+  line-height: 50px;
+  color:#2B292D;
+  strong{
+    color: #F8CF61;
+    border-bottom: 2px solid currentColor;
+
+  }
+}
+
+h2{
+  font-size: 14px;
+  margin-left: 10%;
+}
+
+.home-text{
+  padding-top: 5%;
+  padding-bottom: 5%;
+}
+
+
+.form-control{
+  height: 40px;
+  border-radius: 4px;
+}
 .form-container{
   background-color: white;
   box-shadow: 0px 10px 30px rgba(0,0,0,0.1);
@@ -12,6 +38,23 @@ body {
   min-height: 50vh;
   padding: 0;
   height: 100%;
+  h4{
+    font-size: 144%;
+  }
+  p{
+    font-size: 20px;
+    font-weight: 600;
+    margin-top: 4%;
+
+  }
+}
+
+.ap-suggestions{
+  text-align: left;
+}
+
+.categories-text{
+  margin-bottom: 0px;
 }
 
 .home-box{
@@ -27,6 +70,11 @@ body {
   display: none;
 }
 
+// .form-group{
+
+//     margin-bottom: 0px;
+
+// }
 
 .loading-page{
   background-color: #FFFFFF;
@@ -63,8 +111,8 @@ body {
 }
 
 .svg-burger {
-    padding-bottom: 0px;
-    padding-top: 6px;
+  padding-bottom: 0px;
+  padding-top: 6px;
 }
 
 .svg-coffee {
