profile page css

--- a/app/assets/stylesheets/pages/_profile.scss
+++ b/app/assets/stylesheets/pages/_profile.scss
@@ -48,11 +48,21 @@
 }
 
 .form-inputs {
-  font-size: 15px;
+  font-size: 10px;
 }
 
 .profile-user-info {
   padding-top: 15px;
 }
 
+.btn-log-out {
+  color: #2B292D;
+}
+
+.user_avatar {
+  width: 103px;
+  border: 1px solid;
+  border-radius: 5px;
+  margin-left: 112px;
+}
 
