--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,6 +1,6 @@
 <head class="profile-head">
   <div >
-    <h2 class="profile-title">Hello <%= @user.first_name %>!</h2>
+    <h2 class="profile-title">Hello <span style="color: #F8CF61"><%= @user.first_name %></span>!</h2>
   </div>
 </head>
 
@@ -25,16 +25,19 @@
         <div class="form-inputs" style="margin-top: 20px;">
           <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
             <p>Currently waiting confirmation for: <%= resource.unconfirmed_email %></p>
+            <a id="upload-btn" class="btn"><i class="icon-upload-alt"></i> Browse</a>
           <% end %>
-          <%= f.input :avatar, as: :file, label: 'Wanna update your profile picture?', class: "btn btn-home btn-block submit-btn-yell" %>
         </div>
     </div>
+
+    <p>Fancy a change?</p>
     <div class="form-actions">
-      <%= f.button :submit, 'Update profile pic', class: "btn btn-home btn-block submit-btn-yell" %>
+      <%= f.input :avatar, as: :file, label: false %>
+      <%= f.button :submit, 'Update profile picture!', class: "btn btn-home btn-block submit-btn-yell" %>
     </div>
     <% end %>
   </body>
 </div>
 
-<p>Unhappy? <%= link_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete %></p>
 
+<%= link_to "Log out", destroy_user_session_path, method: :delete, class: "btn-log-out" %>
