--- a/app/views/venues/_info_window.html.erb
+++ b/app/views/venues/_info_window.html.erb
@@ -1,4 +1,4 @@
-<div class="card-product" style="box-shadow: 0 0 0">
+<div class="card-product d-flex flex-column" style="box-shadow: 0 0 0">
   <img class ="photo"src="<%= venue.photo %>" />
   <div class="card-product-infos-window">
     <div class="d-flex justify-content-between align-items-baseline">
