--- a/app/assets/stylesheets/components/_welcome.scss
+++ b/app/assets/stylesheets/components/_welcome.scss
@@ -10,16 +10,14 @@
     justify-content: space-around;
 }
 
-.bottom{
-    display: flex;
-    justify-content: center;
-    flex-direction: column;
-}
+// .bottom{
+//     display: flex;
+//     justify-content: center;
+//     flex-direction: column;
+// }
 
 .wrapper input[type=submit]{
-  color: white;
   padding: 8px 24px;
-  border-radius: 4px;
   background: #F8CF61;
   transition: background 0.3s ease;
   font-weight: bold;
@@ -37,16 +35,11 @@
     border: 1px solid rgb(155, 147, 147);
 }
 
-.wrapper label{
-    height: 40px;
-    margin-right: 10px;
-}
-
 .notification {
   display: flex;
   align-items: center;
   margin-bottom: 8px;
-  background: #FDF1D3;
+  // background: #FDF1D3;
   // background-color: #F36B7F;
   padding: 8px 16px;
   width: 100%;
@@ -56,24 +49,29 @@
 .notification .notification-content {
   flex-grow: 1;
   padding: 0 24px;
+  background: #FDF1D3;
+  border-radius: 20px;
 }
 
 .notification p {
   margin: 0;
   line-height: 1.2;
+  font-size: 10px;
 }
 
 .notification small {
   color: #999999;
   font-weight: bold;
+  font-size: 9px
 }
+
 
 
 .notification-received {
   display: flex;
   align-items: center;
   margin-bottom: 8px;
-  background: #FBD6DC;
+  // background: #FBD6DC;
   // background-color: #F36B7F;
   padding: 8px 16px;
   width: 100%;
@@ -83,16 +81,20 @@
 .notification-received .notification-content {
   flex-grow: 1;
   padding: 0 24px;
+  border-radius: 20px;
+  background: #FBD6DC;
 }
 
 .notification-received p {
   margin: 0;
   line-height: 1.2;
+  font-size: 10px;
 }
 
 .notification-received small {
   color: #999999;
   font-weight: bold;
+  font-size: 9px
 }
 
 
