Added JS from marker to card

--- a/app/assets/stylesheets/components/_map.scss
+++ b/app/assets/stylesheets/components/_map.scss
@@ -1,13 +1,18 @@
 #map{
   height: 100%;
   width: 100%;
-
   z-index: 0;
   position: relative;
+
+
+}
+
+.mapboxgl-popup-close-button{
+  display:none;
 }
 
 .mapboxgl-popup {
-  max-width: 300px;
+  display: none !important;
 }
 
 .mapboxgl-popup-content {
