--- a/app/assets/stylesheets/components/_card_product.scss
+++ b/app/assets/stylesheets/components/_card_product.scss
@@ -1,18 +1,21 @@
 .card-design {
   background-color: white;
-  min-height:100vh;
   z-index: 111;
   position: absolute;
   top: 45vh;
-  border-radius: 15px;
+  border-radius: 5px;
   transition: top 1s !important;
   width: 100vw;
-  // /margin: 0 2.5vw;
+  height: 50vh;
   h4{
     font-size: 20px;
     color: #2B292D;
     font-family: 'Archivo';
     margin-bottom: 0;
+  }
+  .content{
+    overflow:auto;
+    height: 50vh;
   }
 }
 
@@ -21,7 +24,7 @@
   height: 120px;
   display: flex;
   align-items: center;
-  margin-top: 13px;
+  margin-bottom: 13px;
   // box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.06);
   .card-product-infos{
     flex: 0 0 auto;
