--- a/app/assets/stylesheets/components/_review_card.scss
+++ b/app/assets/stylesheets/components/_review_card.scss
@@ -36,8 +36,8 @@
 }
 
 .review-card-wrapper {
-  margin-top: 14px;
-  padding-bottom: 25px;
+  margin-top: 10px;
+  padding-bottom: 13%;
 }
 
 .hide-review {
@@ -46,7 +46,14 @@
 
 .btn-review {
   text-align: center;
-  padding-left: 16px;
+  padding-left: 50%;
+}
+
+.yelp-img {
+  max-width:25%;
+  height:auto;
+  // text-align: center;
+  // padding-left: 50%;
 }
 
 
