--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,7 +8,7 @@
     <meta property="og:title" content="Halfway" />
     <meta property="og:type" content="Application" />
     <meta property="og:url" content="www.meetmehalfway.app" />
-    <meta property="og:image" content='../../assets/images/home.png' />
+    <meta property="og:image" content='../../assets/images/home2.png' />
     <meta property="og:description" content="Halfway recommends restaurants, bars and cafes at the halfway point between you and your friend's location. It is perfect for young, sociable professionals leading busy lives in London." />
 
     <meta charset="UTF-8">
