--- a/app/assets/stylesheets/pages/_venues_show.scss
+++ b/app/assets/stylesheets/pages/_venues_show.scss
@@ -6,8 +6,8 @@
   top: 7vh;
   transition: top 1s !important;
   width: 100vw;
-  border-top-left-radius: 33px;
-  border-top-right-radius: 33px;
+  border-top-left-radius: 4px;
+  border-top-right-radius: 4px;
 
 }
 
@@ -24,10 +24,13 @@
 }
 
 .venue-title{
-  font-size: 24px;
-  padding-top: 30px;
-  padding-left: 30px;
-  padding-right: 30px;
+  font-size: 20px;
+  h4{
+    font-size: 10px;
+    color: #2B292D;
+    font-family: 'Archivo' !important;
+  }
+
   .fa-heart{
     color:#F36B7F;
   }
@@ -45,8 +48,6 @@
   justify-content: space-evenly;
   height: 0;
 }
-
-
 
 
 .show-photo{
