Added link to the book button

--- a/app/views/venues/show.html.erb
+++ b/app/views/venues/show.html.erb
@@ -41,7 +41,7 @@
           <p>Let's go</p>
         </div>
         <div class="icon-text d-flex flex-column align-items-center">
-          <a class="icons calendar" href="#"><i class="far fa-calendar-alt"></i></a>
+          <a class="icons calendar" href="https://www.<%= @venue.url %>"><i class="far fa-calendar-alt"></i></a>
           <p>Book</p>
         </div>
         <div class="icon-text d-flex flex-column align-items-center">
