remove back button

--- a/app/views/venues/index.html.erb
+++ b/app/views/venues/index.html.erb
@@ -11,9 +11,9 @@
       data-mapbox-api-key="<%= ENV['MAPBOX_API_KEY'] %>"
     ></div>
 
-    <div style="z-index: 1;">
+<!--     <div style="z-index: 1;">
       <a href="/venues"><i class="fas fa-arrow-circle-left m-2 p-1" id="back"></i></a>
-    </div>
+    </div> -->
     <div class="container card-design padding-bottom" id="transition">
       <div class="d-flex justify-content-between align-items-center pb-3 pr-2 pt-3">
         <h4 class=""><strong>Our Recommendations</strong></h4>
