--- a/app/views/venues/show.html.erb
+++ b/app/views/venues/show.html.erb
@@ -9,9 +9,9 @@
       data-mapbox-api-key="<%= ENV['MAPBOX_API_KEY'] %>"
     ></div>
 
-    <div style="z-index: 1;">
+   <!--  <div style="z-index: 1;">
       <a href="/venues"><i class="fas fa-arrow-circle-left m-2 p-1" id="back"></i></a>
-    </div>
+    </div> -->
 
     <div class="container venue-box-design" id="show-transition">
       <div class="title pb-3 pl-2 pt-3 d-flex align-items-center justify-content-between">
