added review background colour

--- a/app/assets/stylesheets/components/_review_card.scss
+++ b/app/assets/stylesheets/components/_review_card.scss
@@ -1,5 +1,5 @@
 .review-card {
-  background-color: #F5F5F5;
+  background-color: #FEFAEF;
   padding: 11px;
   font-size: 11px;
   position: relative;
